# BugTraceAI-CLI

./: .dockerignore  .env.example  .gitignore  AUDIT_P0_FIXES.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_AUDIT_REPORT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.mcp  FOLDER_STRUCTURE.md  GEMINI_HANDOFF_TIERED_VALIDATION.md  HANDOFF_EXPLOIT_CHAINING.md  INSTALLATION.md  README.md  REFACTORING_PROGRESS.md  VERSION  add_dedup_batch.py  analyze_cost.py  analyze_spam.py  api.py  apply_dedup_final.py  bugtraceai-cli  bugtraceaicli.conf  check_db_status.py  check_progress.py  check_scan_8.py  check_ssrf_scan8.py  check_status.py  docker-compose.yml  docker-entrypoint.sh  example_urls.txt  inspect_db.py  install.sh  list_tables.py  openapi.json  openapi.yaml  patch_report_images.py  podman-compose.local-llm.yml  pyproject.toml  (+7 more)
.agent/workflows/: audit_report.md  implement_feature_v3.md
.ai-context/: ARCHITECTURE_V3.md  ARCHITECTURE_V4.md  AUDIT_SCORING_CALIBRATION_2026-01-20.md  BUGTRACE_MASTER_DOC.md  CALIBRATION_DASTYSAST_2026-01-18.md  CONDUCTOR_REFACTOR_PLAN.md  DEBUG_SESSION_20260131.md  DEDUPLICATION_FIX_RETROSPECTIVE_2026-01-18.md  DOJO_GUIDE.md  FILEUPLOAD_AUTONOMY_APPLIED.md  FIX_LOG_TIERED_VALIDATION.md  OPTIMIZATION_REVIEW_2026-01-15.md  PROJECT_STORYLINE.md  QUICKSTART_GUIDE.md  README.md  REMOTE_SYNC.md  SPECIALIST_AUTONOMY_PATTERN.md  SPECIALIST_AUTONOMY_ROLLOUT.md  SQLI_AGENT_V3_CHANGELOG.md  V3.1_DOCUMENTATION_SUMMARY.md  V3.1_FILES_AFFECTED.md  report_generation_spec.md
.ai-context/PLANS/: ARCHITECTURE_REFACTOR_V3.5.md
.ai-context/architecture/: ARCHITECTURE_V7.md  CONCURRENCY_SOLUTION.md  INTELLIGENT_BREAKOUTS.md  README.md  SKILLS_SYSTEM.md  STRUCTURE_SUMMARY.md  WET_DRY_IMPLEMENTATION_CHECKLIST.md  WET_DRY_IMPLEMENTATION_DESIGN.md  WET_DRY_IMPLEMENTATION_GUIDE.md  XSS_POST_METHOD_SUPPORT.md  architecture_future.md  architecture_overview.md  architecture_v4.md  diagrams.md  phases.md
.ai-context/archive/: MASTER_IMPLEMENTATION_PLAN.md  PENTEST_SUMMARY.md  PHOENIX_REFACTOR_SUMMARY.md  QUICKSTART.md  WALKTHROUGH.md  analysis_implementation_progress.md  analysis_test_results.md  architecture_flowchart.md  architecture_v2_vertical_agents.md  bugfix_20260102_browser_vision.md  bugtrace_ai_methodology.md  code_audit_report.md  documentation_status.md  documentation_update_summary.md  event_bus_implementation_plan.md  exploit_agent_migration_guide.md  http_manipulator.md  implementation_hitl_guardrails.md  implementation_progress.md  improvement_plan_v13.md  integration_details.md  logic_map.json  multi_approach_documentation_index.md  multi_approach_implementation_plan.md  multi_approach_strategy.md  multi_approach_task.md  multi_approach_walkthrough.md  multi_model_analysis_design.md  (+20 more)
.claude/: CLAUDE.md
.planning/: ERRORS_FOUND.md  FIX_REGRESSIONS_PLAN.md  LONEWOLF-RESEARCH.md  REFACTORING_ROADMAP.md  ROADMAP.md  SMART_PROBE_PLAN.md  STATE.md  v5.0-MILESTONE-AUDIT.md
alembic/: env.py
bugtrace/: __init__.py  __main__.py  cli.py  logic_map.json
docs/: LOCAL_LLM_SETUP.md
documentation/: 01-architecture-overview.md  02-configuration.md  03-phase1-discovery.md  04-phase2-analysis.md  05-phase3-thinking-consolidation.md  06-phase4-exploitation.md  07-phase5-validation.md  08-phase6-reporting.md  09-core-infrastructure.md  10-api-layer.md  11-ui-system.md  README.md
examples/: auth-config-bugstore.yaml  auth-config.yaml
lab/: app.py  index.php  server.py
protocol/: context.md  false-positive-patterns.md  payload-library.md  security-rules.md  tech-stack.md  validation-checklist.md
scripts/: advanced_exploit.py  benchmark_xss.py  check_context.py  debug_verifier.py  demo_url_reports.py  evaluate_report_quality.py  exploit_ginandjuice.py  find_xss.py  generate_report.py  investigate_site.py  regenerate_report.py  run_validator_dojo.py  search_vulns.py  show_payloads.py  test_validator.py  test_visual.py  validate_fixes.py  verify_db.py  verify_xml_sqli.py  verify_xss.py
tests/: conftest.py  demo_ui.py  test_all_vulnerability_types.py  test_analysis_standalone.py  test_bugtrace_sanity.py  test_comprehensive_quick.py  test_conductor_v2.py  test_database.py  test_documentation_accuracy.py  test_e2e_vision.py  test_event_bus.py  test_false_positive_validation.py  test_fileupload.py  test_finding_conversion.py  test_integration_new_agents.py  test_jwt_agent.py  test_leveled_dojo.py  test_llm_client.py  test_manipulator.py  test_manual_payload.py  test_openredirect_agent.py  test_payloads.py  test_phase1_agents.py  test_pipeline_orchestration.py  test_prototype_pollution_agent.py  test_reactor.py  test_security_tools.py  test_smoke.py  test_sqli_false_positive_fixes.py  test_thinking_agent.py  test_ui_integration.py  test_validation_optimization.py  test_waf_system.py  test_websocket_endpoint.py  test_working_payload.py  test_xml_parser.py  test_xss_http_validation.py  test_xss_visual.py  verify_reporting.py  verify_reporting_v5.py  (+2 more)
tools/: anthropic_login.sh  build_fuzzers.sh  model_eval.py  model_eval_results.json  test_auth.py
(+793 files in other folders)
